--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<canvas id="amazingCanvas" width="480" height="320"></canvas>
 
 <script>
-	// JavaScript code goes here
-
-	var canvas = document.getElementById("myCanvas");
+	/*// JavaScript code goes here
+	var canvas = document.getElementById("amazingCanvas");
 	var ctx = canvas.getContext("2d");
 	var x = canvas.width/2;
 	var y = canvas.height-30;
@@ -59,32 +58,14 @@
 	    y += dy;
 	}	
 	setInterval(draw, 10);
-	setInterval(draw, 10);
-
-
-	
-	/*
-	ctx.beginPath();
-	ctx.rect(20, 40, 50, 50);
-	ctx.fillStyle = "#FF0000";
-	ctx.fill();
-	ctx.closePath();
-
-	ctx.beginPath();
-	ctx.arc(240, 160, 20, 0, Math.PI*2, false);
-	ctx.fillStyle = "green";
-	ctx.fill();
-	ctx.closePath();
-
-	ctx.beginPath();
-	ctx.rect(160, 10, 100, 40);
-	ctx.strokeStyle = "rgba(0, 0, 255, 0.5)";
-	ctx.stroke();
-	ctx.closePath();*/
-
+	setInterval(draw, 10);*/
 
 </script>
 
+
+
+<script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
+<script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="scripts/hero.js"></script>
 <script src="scripts/enemy.js"></script>
 
