--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Gamedev Canvas Workshop</title>
+
     <style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
@@ -58,7 +59,7 @@
 	    y += dy;
 	}	
 	setInterval(draw, 10);
-	setInterval(draw, 10);*/
+	setInterval(draw, 10);/
 
 </script>
 
