--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <canvas id="amazingCanvas" width="480" height="320"></canvas>
 
 <script>
-	/*// JavaScript code goes here
+	/*
 	var canvas = document.getElementById("amazingCanvas");
 	var ctx = canvas.getContext("2d");
 	var x = canvas.width/2;
@@ -59,7 +59,7 @@
 	    y += dy;
 	}	
 	setInterval(draw, 10);
-	setInterval(draw, 10);/
+	setInterval(draw, 10);*/
 
 </script>
 
