--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     	canvas { background: #eee; display: block; margin: 0 auto; }
     </style>
 </head>
-<body>
+<body onload="init();">
 
-<canvas id="amazingCanvas" width="480" height="320"></canvas>
+<canvas id="amazingCanvas" width="1000" height="700"></canvas>
 
 <script>
 	/*
@@ -63,8 +63,7 @@
 
 </script>
 
-
-
+<script src="https://code.createjs.com/createjs-2015.11.26.min.js" ></script>
 <script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
 <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="scripts/hero.js"></script>
