<script src="scripts/main.js"></script>

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="scripts/hero.js"></script>
 <script src="scripts/enemy.js"></script>
+<script src="scripts/main.js"></script>
 
 
 </body>
