--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Amazing Game</title>
 
     <style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
     </style>
 </head>
-<body onload="init();">
+<body onload="start();">
 
 <canvas id="amazingCanvas" width="1000" height="700"></canvas>
 
